
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Analysis"
version = "0.0.1"
authors = [
  { name="Farzaneh Hashemi", email="fh@example.com" },
]
description = "A simple python package"
readme = "README.md"
requires-python = ">=3.8"
dependendencies = ["requests", "numpy", "logging", "yaml", "os","pandas", "json", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
